--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,8 @@ services:
     environment:
       - MONGO_URI=mongodb://mongo:27017/blogdb
     volumes:
-      - ./backend:/app         
-      - /app/node_modules    
-    command: npm run dev       
+      - ./backend:/app
+      - /app/node_modules
     depends_on:
       - mongo
     networks:
@@ -35,10 +34,12 @@ services:
     restart: always
     ports:
       - "3000:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true 
     volumes:
-      - ./frontend:/app         
+      - ./frontend:/app
       - /app/node_modules
-    command: npm start        
+    command: ["npm", "start"]
     depends_on:
       - backend
     networks:
