feat: push project

--- a/nginx-swarm.conf
+++ b/nginx-swarm.conf
@@ -4,7 +4,6 @@ events {
 
 http {
     upstream backend_servers {
-        # Sử dụng service discovery của Docker Swarm
         server backend:5000 max_fails=3 fail_timeout=30s;
         keepalive 32;
     }
@@ -35,14 +34,13 @@ http {
         listen 80;
         server_name localhost;
 
-        # Health check endpoint
         location /health {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
         }
 
-        # API routes với load balancing
+        # API routes with load balancing
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             
@@ -63,7 +61,6 @@ http {
             proxy_buffers 8 4k;
         }
 
-        # Upload routes với rate limiting riêng
         location /api/posts {
             limit_req zone=upload_limit burst=5 nodelay;
             
@@ -72,12 +69,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             
-            # Increase timeouts for file uploads
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
             
-            # Increase body size for uploads
             client_max_body_size 50M;
         }
 
@@ -88,7 +83,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             
-            # WebSocket support for React dev
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
