--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,5 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE 5000
-CMD ["sh", "-c", "npm run seed && npm run start"]
+
+CMD ["npm", "run", "start"]
